tests/errmsgs/t19225.nim
discard """
  errormsg: "expression has no type: sequtils"
"""


import std/sequtils; sequtils